tests/errors/incorrect_type_where_01.f90
program main
   implicit none
   integer  :: b(5)

   where(.true.) b = 12121
   print *, b
end program main
